# tsubakuro-rust

./: README.md  h
tsubakuro-rust-core/: Cargo.toml  README.md  build.rs
tsubakuro-rust-core/docs/: blob_ja.md  changelog_ja.md  diff-java_ja.md  usage_ja.md
tsubakuro-rust-core/docs/internal/: ResponseBox_ja.md  logging_ja.md
tsubakuro-rust-core/src/: error.rs  lib.rs  prelude.rs  util.rs
tsubakuro-rust-core/src/job/: cancel_job.rs  job.rs  mod.rs
tsubakuro-rust-core/src/job/inner/: convert_job.rs  mod.rs  spawn_job.rs  supplier_job.rs  value_job.rs  wire_slot_job.rs
tsubakuro-rust-core/src/service/: mod.rs
tsubakuro-rust-core/src/service/core/: core_service.rs  error.rs  mod.rs
tsubakuro-rust-core/src/session/: credential.rs  endpoint.rs  lob_transfer_type.rs  mod.rs  option.rs  session.rs
tsubakuro-rust-core/src/transaction/: commit_option.rs  error_info.rs  mod.rs  option.rs  status.rs  transaction.rs
tsubakuro-rust-dbtest/: Cargo.toml  README.md
tsubakuro-rust-dbtest/src/: credential.rs  job.rs  main.rs  session.rs  sub.rs
tsubakuro-rust-dbtest/src/execute/: job.rs  mod.rs  sub.rs
tsubakuro-rust-dbtest/src/service/: mod.rs
tsubakuro-rust-dbtest/src/transaction/: error_info.rs  mod.rs  option.rs  status.rs  transaction.rs
tsubakuro-rust-ffi/: Cargo.toml  README.md
tsubakuro-rust-ffi/docs/: usage_ja.md
tsubakuro-rust-ffi/docs/internal/: logging_ja.md
tsubakuro-rust-ffi/example/: cbindgen.toml
tsubakuro-rust-ffi/example/c/: README.md  cbindgen.toml  example.c  tsubakuro-rust-ffi.h
tsubakuro-rust-ffi/src/: context.rs  error.rs  lib.rs  logger.rs  return_code.rs
tsubakuro-rust-ffi/src/job/: cancel_job.rs  job.rs  mod.rs
tsubakuro-rust-ffi/src/service/: mod.rs
tsubakuro-rust-ffi/src/session/: credential.rs  endpoint.rs  mod.rs  option.rs  session.rs  type.rs
tsubakuro-rust-ffi/src/transaction/: commit_option.rs  error_info.rs  mod.rs  option.rs  status.rs  transaction.rs  type.rs
tsubakuro-rust-ffi/src/util/: bytes.rs  cchar.rs  cstr.rs  mod.rs
tsubakuro-rust-odbc/: Cargo.toml  README.md  build.rs
tsubakuro-rust-odbc/docs/: functions_ja.md  install_ja.md  types_ja.md  usage_ja.md
tsubakuro-rust-odbc/docs/internal/: connection_option_ja.md
tsubakuro-rust-odbc/example/: example.c  exampleW.c
tsubakuro-rust-odbc/installer/: README.md  installer.iss
tsubakuro-rust-odbc/resources/: dsn_dialog.rc  versioninfo.rc
tsubakuro-rust-odbc/src/: ctype.rs  dbc.rs  env.rs  handle.rs  lib.rs  logger.rs  setup.rs  stmt.rs  util.rs
tsubakuro-rust-odbc/src/ctype/: c_data_type.rs  sql_data_type.rs  sql_date_struct.rs  sql_numeric_struct.rs  sql_return.rs  sql_time_struct.rs  sql_timestamp_struct.rs
tsubakuro-rust-odbc/src/dbc/: connect.rs  connect_attr.rs  disconnect.rs  driver_connect.rs  functions.rs  get_functions.rs  get_info.rs
tsubakuro-rust-odbc/src/env/: env_attr.rs
tsubakuro-rust-odbc/src/handle/: diag.rs  end_tran.rs  get_diag_field.rs  get_diag_rec.rs  hdbc.rs  henv.rs  hstmt.rs
tsubakuro-rust-odbc/src/setup/: config_dsn.rs  dsn_dialog_value.rs  dsn_dialog_windows.rs  installer.rs
tsubakuro-rust-odbc/src/stmt/: bind_col.rs  bind_parameter.rs  col_attribute.rs  columns.rs  describe_col.rs  exec_direct.rs  execute.rs  fetch.rs  free_stmt.rs  get_data.rs  get_type_info.rs  more_results.rs  num_result_cols.rs  prepare.rs  primary_keys.rs  row_count.rs  stmt_attr.rs  tables.rs
tsubakuro-rust-python/: .gitignore  Cargo.toml  README.md  pyproject.toml  tsubakuro_rust_python.pyi
tsubakuro-rust-python-dbtest/: .gitignore  README.md  pyproject.toml
tsubakuro-rust-python-dbtest/src/: example.py  keepalive_test.py
tsubakuro-rust-python-dbtest/tests/: commit_option_test.py  config_test.py  conftest.py  connection_test.py  cursor_query_test.py  cursor_test.py  cursor_update_test.py  exception_test.py  global_constant_test.py  list_tables_test.py  multiprocessing_test.py  shutdown_option_test.py  table_metadata_test.py  transaction_option_test.py
tsubakuro-rust-python-dbtest/tests/type/: binary_test.py  blob_test.py  bool_test.py  char_test.py  clob_test.py  date_test.py  decimal_test.py  float4_test.py  float8_test.py  int4_test.py  int8_test.py  time_test.py  time_tz_test.py  timestamp_test.py  timestamp_tz_test.py  varbinary_test.py  varchar_test.py
tsubakuro-rust-python/docs/: .gitignore  .readthedocs.yaml  README.md  api_ja.md  blob_ja.md  mkdocs.yml  mkdocs_github_alerts.py  types_ja.md  usage_ja.md
tsubakuro-rust-python/docs/internal/: about-readme_ja.md  exception_ja.md  logging_ja.md  module-name_ja.md  type-stub-file_ja.md
tsubakuro-rust-python/docs/tsubakuro_rust_python/: index.html  index.md  tsubakuro_rust_python.html
tsubakuro-rust-python/docs/tsurugi_dbapi/: index.html
tsubakuro-rust-python/examples/: blob_example.py  example.py  log_example-logging.py  log_example.py  multiprocessing_example.py  prepare_example.py
tsubakuro-rust-python/python/tsubakuro_rust_python/: __init__.py  __init__.pyi
tsubakuro-rust-python/python/tsurugi_dbapi/: __init__.py  __init__.pyi
tsubakuro-rust-python/src/: column.rs  commit_option.rs  config.rs  connection.rs  cursor.rs  error.rs  lib.rs  lob_transfer_type.rs  logger.rs  shutdown_option.rs  table_metadata.rs  transaction_option.rs  type_code.rs
tsubakuro-rust-python/src/connection/: inner_connection.rs
tsubakuro-rust-python/src/cursor/: execute.rs  query_result.rs
tsubakuro-rust-python/src/type_code/: blob.rs  bool.rs  bytes.rs  clob.rs  date.rs  datetime.rs  decimal.rs  float32.rs  float64.rs  int32.rs  int64.rs  offset_datetime.rs  offset_time.rs  str.rs  time.rs
tsubakuro-rust-python/tests/: commit_option_test.py  config_test.py  error_test.py  global_constant_test.py  pickle_test.py  shutdown_option_test.py  transaction_option_test.py
tsubakuro-rust-python/tests/type_code/: bool_test.py  bytes_test.py  date_test.py  datetime_test.py  decimal_test.py  float32_test.py  float64_test.py  int32_test.py  int64_test.py  offset_datetime_test.py  offset_time_test.py  str_test.py  time_test.py
tsubakuro-rust-python/tools/: modify_pyi.py
(+435 files in other folders)
