[package]
name = "tsubakuro-rust-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bigdecimal = { version = "0.4.7", optional = true }
chrono = { version = "0.4.39", optional = true }
log = "0.4.22"
prost = "0.13.3"
rust_decimal = { version = "1.36.0", optional = true }
time =  { version = "0.3.37", optional = true }
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"

[build-dependencies]
prost-build = "0.13.3"

[features]
default = ["with_bigdecimal", "with_rust_decimal", "with_chrono", "with_time"]

with_bigdecimal = ["bigdecimal"]
with_rust_decimal = ["rust_decimal"]
with_chrono = ["chrono"]
with_time = ["time"]
