[package]
name = "tsubakuro-rust-core"
version = "0.4.0"
description = "core library to access Tsurugi for Rust"
homepage = "https://github.com/project-tsurugi/tsubakuro-rust/tree/master/tsubakuro-rust-core"
documentation = "https://docs.rs/tsubakuro_rust_core/"
repository = "https://github.com/project-tsurugi/tsubakuro-rust/tree/master/tsubakuro-rust-core"
authors = ["Project Tsurugi <https://github.com/project-tsurugi/tsurugidb>"]
keywords = ["database", "tsurugidb", "sql"]
categories = ["database"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
async-trait = "0.1.83"
bigdecimal = { version = "0.4.7", optional = true }
chrono = { version = "0.4.39", optional = true }
log = "0.4.22"
prost = "0.13.3"
rust_decimal = { version = "1.36.0", optional = true }
time =  { version = "0.3.37", optional = true }
tokio = { version = "1.43.1", features = ["rt-multi-thread", "io-util", "net", "sync", "time"] }
url = "2.5.4"
litemap = "=0.7.4"
zerofrom = "=0.1.5"
zerofrom-derive = "=0.1.5"

[build-dependencies]
prost-build = "0.13.3"

[features]
default = ["with_bigdecimal", "with_rust_decimal", "with_chrono", "with_time"]

with_bigdecimal = ["bigdecimal"]
with_rust_decimal = ["rust_decimal"]
with_chrono = ["chrono"]
with_time = ["time"]
