[package]
name = "tsubakuro-rust-core"
version = "0.11.0"
description = "core library to access Tsurugi for Rust"
homepage = "https://github.com/project-tsurugi/tsubakuro-rust/tree/master/tsubakuro-rust-core"
documentation = "https://docs.rs/tsubakuro_rust_core/"
repository = "https://github.com/project-tsurugi/tsubakuro-rust/tree/master/tsubakuro-rust-core"
authors = ["Project Tsurugi <https://github.com/project-tsurugi/tsurugidb>"]
keywords = ["database", "tsurugidb", "sql"]
categories = ["database"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.84.1"

[dependencies]
async-trait = "0.1.83"
bigdecimal = { version = "0.4.7", optional = true }
chrono = { version = "0.4.39" }
log = "0.4.22"
prost = "0.14"
rust_decimal = { version = "1.36.0", optional = true }
time =  { version = "0.3.47", optional = true }
tokio = { version = "1.43.1", features = ["rt-multi-thread", "io-util", "net", "sync", "time", "fs"] }
tokio-stream = "0.1"
url = "2.5.4"
litemap = "=0.7.4"
zerofrom = "=0.1.5"
zerofrom-derive = "=0.1.5"
pem = "3.0.5"
rsa = "0.9.10"
rand = "0.8.6"
base64 = "0.22.1"
sha1 = "0.10.6"
bytes = "1.11.1"
tonic = { version = "0.14.5", features = ["tls-native-roots", "tls-ring"] }
tonic-prost = "0.14.5"

[build-dependencies]
prost-build = "0.14"
tonic-prost-build = "0.14.5"

[dev-dependencies]
tempfile = "3.17.1"

[features]
default = ["with_bigdecimal", "with_rust_decimal", "with_chrono", "with_time"]

with_bigdecimal = ["bigdecimal"]
with_rust_decimal = ["rust_decimal"]
with_chrono = []
with_time = ["time"]
