[package]
name = "tsubakuro-rust-dbtest"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = "0.4.7"
chrono = "0.4.39"
env_logger = "0.11.6"
rust_decimal = "1.36.0"
time = "0.3.37"
tokio = { version = "1.42.0", features = ["macros"] }
tsubakuro-rust-core = { path = "../tsubakuro-rust-core" }
