[package]
name = "tsubakuro-rust-dbtest"
version = "0.8.0"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.84.1"

default-run = "tsubakuro-rust-dbtest"

[dependencies]
bigdecimal = "0.4.7"
chrono = "0.4.39"
env_logger = "0.11.6"
log = "0.4.22"
rust_decimal = "1.36.0"
tempfile = "3.17.1"
time = "0.3.37"
tokio = { version = "1.43.1", features = ["macros"] }
tsubakuro-rust-core = { path = "../tsubakuro-rust-core" }
