[package]
name = "tsubakuro-rust-ffi"
version = "0.1.0"
description = "library providing functions in C ABI format to access Tsurugi DB"
homepage = "https://github.com/project-tsurugi/tsubakuro-rust/tree/master/tsubakuro-rust-ffi"
documentation = "https://docs.rs/tsubakuro_rust_ffi/"
repository = "https://github.com/project-tsurugi/tsubakuro-rust/tree/master/tsubakuro-rust-ffi"
keywords = ["database", "tsurugidb", "sql"]
categories = ["database"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"
tokio = { version = "1.42.0"}
tsubakuro-rust-core = { path = "../tsubakuro-rust-core", default-features = false }
