[project]
name = "tsubakuro-rust-python-dbtest"
version = "0.1.0"
description = "test for tsubakuro-rust-python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "tsurugi-dbapi",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv.sources]
tsurugi-dbapi = { path = "../tsubakuro-rust-python" }
