[package]
name = "tsubakuro-rust-python"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tsubakuro_rust_python"
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.39" }
env_logger = "0.11.8"
log = "0.4.22"
pyo3 = { version = "0.27.2", features = ["abi3-py310", "rust_decimal", "chrono"] }
rust_decimal = { version = "1.36.0" }
tokio = { version = "1.43.1" }
tsubakuro-rust-core = { path = "../tsubakuro-rust-core", default-features = false, features = ["with_rust_decimal", "with_chrono"] }
