[package]
name = "tsubakuro-rust-python"
homepage = "https://github.com/project-tsurugi/tsubakuro-rust/tree/master/tsubakuro-rust-python"
documentation = "https://github.com/project-tsurugi/tsubakuro-rust/tree/master/tsubakuro-rust-python/docs/"
repository = "https://github.com/project-tsurugi/tsubakuro-rust/tree/master/tsubakuro-rust-python"
authors = ["Project Tsurugi <https://github.com/project-tsurugi/tsurugidb>"]
keywords = ["database", "tsurugidb", "sql"]
categories = ["database"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.1"

[lib]
name = "_tsubakuro_rust_python"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.39" }
env_logger = "0.11.8"
log = "0.4.22"
pyo3 = { version = "0.27.2", features = ["abi3-py310", "rust_decimal", "chrono"] }
pyo3-log = "0.13.3"
pyo3-stub-gen = { version = "0.18.0", features = ["rust_decimal"] }
rust_decimal = { version = "1.36.0" }
tokio = { version = "1.43.1" }
tsubakuro-rust-core = { path = "../tsubakuro-rust-core", default-features = false, features = ["with_rust_decimal", "with_chrono"] }
