[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "tsurugi-dbapi"
requires-python = ">=3.10"
authors = [
  {name = "Project Tsurugi"},
]
description = "Tsurugi Python DB-API"
readme = "README.md"
license = "Apache-2.0"
keywords = ["database", "db-api", "dbapi", "dbapi2", "pep249", "sql", "tsurugidb", "tsurugi"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
]
dynamic = ["version"]

[tool.maturin]
module-name = "tsurugi_dbapi._tsubakuro_rust_python"
python-source = "python"
exclude = ["**/__pycache__", "**/*.pyc"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }, { file = "python/**/*.py" }]

[dependency-groups]
dev = [
    "pdoc3>=0.11.6",
    "pytest>=9.0.2",
]

[project.urls]
Homepage = "https://github.com/project-tsurugi/tsubakuro-rust/tree/master/tsubakuro-rust-python"
Documentation = "https://github.com/project-tsurugi/tsubakuro-rust/tree/master/tsubakuro-rust-python/docs/tsurugi_dbapi/"
Repository = "https://github.com/project-tsurugi/tsubakuro-rust.git"
