[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "tsurugi-dbapi"
requires-python = ">=3.10"
authors = [
  {name = "Project Tsurugi"},
]
description = "Python DB API 2.0 (PEP 249) driver for Tsurugi"
readme = "docs/README.md"
license = "Apache-2.0"
keywords = ["database", "db-api", "dbapi", "dbapi2", "pep249", "sql", "tsurugidb", "tsurugi"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
]
dynamic = ["version"]

[tool.maturin]
module-name = "tsurugi_dbapi._tsubakuro_rust_python"
python-source = "python"
exclude = ["**/__pycache__", "**/*.pyc"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }, { file = "python/**/*.py" }]

[dependency-groups]
dev = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.20",
    "pdoc3>=0.11.6",
  "pymdown-extensions>=10.15",
    "pytest>=9.0.2",
]

[project.urls]
Homepage = "https://github.com/project-tsurugi/tsubakuro-rust/tree/master/tsubakuro-rust-python"
Documentation = "https://tsurugi-dbapi.readthedocs.io/"
Repository = "https://github.com/project-tsurugi/tsubakuro-rust.git"
